# Pokemon-tournament

./: README.md  achivements.ipynb  attack.py  battle.py  leadboard.md  logger.py  pokedex.py  pyproject.toml  tournament.py
data/: movements.csv  pokemons.csv
docs/: Altafulla-code-challenge.pptx  CODEOWNERS  ~$Altafulla-code-challenge.pptx
models/: movement.py  pokemon.py  pokemon_type.py
results/: KoF_vs_DayOfDefeat.csv  KoF_vs_RegressionRangers.csv  KoF_vs_ash-ketchum.csv  KoF_vs_cloud_migration.csv  KoF_vs_ev3n-w0rse-than-mats.csv  KoF_vs_kasperle.csv  KoF_vs_martini.csv  KoF_vs_minmax.csv  KoF_vs_not-so-smart.csv  KoF_vs_scenic_castle_view.csv  KoF_vs_team_mat.csv  RegressionRangers_vs_DayOfDefeat.csv  RegressionRangers_vs_ash-ketchum.csv  RegressionRangers_vs_cloud_migration.csv  RegressionRangers_vs_ev3n-w0rse-than-mats.csv  RegressionRangers_vs_example_team1.csv  RegressionRangers_vs_example_team2.csv  RegressionRangers_vs_kasperle.csv  RegressionRangers_vs_minmax.csv  RegressionRangers_vs_scenic_castle_view.csv  RegressionRangers_vs_team_mat.csv  ash-ketchum_vs_DayOfDefeat.csv  ash-ketchum_vs_ev3n-w0rse-than-mats.csv  ash-ketchum_vs_example_team2.csv  ash-ketchum_vs_scenic_castle_view.csv  cloud_migration_vs_DayOfDefeat.csv  cloud_migration_vs_ash-ketchum.csv  cloud_migration_vs_ev3n-w0rse-than-mats.csv  cloud_migration_vs_example_team2.csv  cloud_migration_vs_minmax.csv  cloud_migration_vs_scenic_castle_view.csv  cloud_migration_vs_team_mat.csv  ev3n-w0rse-than-mats_vs_DayOfDefeat.csv  example_team1_vs_ash-ketchum.csv  example_team1_vs_cloud_migration.csv  (+55 more)
(+33 files in other folders)
